# dandanplay-resource-service

./: .editorconfig  .gitignore  .prettierrc  README.md  app.json
cf-worker/: .gitignore  dist.js  jest.config.js  package-lock.json  package.json  webpack.config.js  worker.js  wrangler.toml
cf-worker/scripts/: dist.js  helper.js
cf-worker/src/: index.js
cf-worker/src/api/: dmhy.js  root.js  search-option.js  searchOption.js  self.js
cf-worker/src/config/: config.js
cf-worker/src/router/: index.js
cf-worker/src/utils/: helper.js  htmlparser.js  request.js
cf-worker/test/api/: search-option.test.js
cf-worker/test/utils/: helper.test.js  htmlparser.test.html  htmlparser.test.js
deno-deploy/: playground.js
docs/: README.md  SearchOptions.md
golang/: .gitignore  Procfile  README.md  go.mod  go.sum  main.go
golang/.dist/: build.cmd  build.sh
golang/api/: api.go  model.go  search_option.go  search_option_test.go
golang/api/dmhy/: dmhy.go
golang/api/kisssub/: README.md  kisssub.go
golang/cmd/: root.go
golang/config/: config.go  self.go
golang/models/dmhy/: dmhy.go  scraper .go
golang/rotuers/: router.go
golang/router/: router.go
golang/routers/: router.go
golang/service/: service.go
golang/utils/: helper.go  helper_test.go
golang/utils/colorize/: colorize.go
golang/utils/logger/: logger.go
golang/utils/opencc/: opencc.go
python/: .gitignore  README.md  dandanplay-resource-service.py  pyproject.toml
rust/: Cargo.toml  README.md  build.rs
rust/src/: main.rs
rust/src/api/: dmhy.rs  mod.rs
rust/src/model/: meta.rs  mod.rs  search_option.rs
rust/src/router/: index.html  mod.rs
rust/src/util/: mod.rs  request.rs
typescript/: .gitignore  .prettierignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  vitest.config.ts
typescript/cf-worker/: dist.ts  main.ts  package.json  tsconfig.json  wrangler.toml
typescript/deno-deploy/: deno.json  dist.ts  import_map.json  main.ts  routes.ts
web/: default.html  index.html
