[package]
name = "dandanplay-resource-service"
version = "0.0.5-alpha"
authors = ["Lussac Zheng <lussaczheng@gmail.com>"]
edition = "2021"
rust-version = "1.63"

description = "API implementation for 'dandanplay' resource search service, in Rust."
readme = "README.md"
homepage = "https://github.com/LussacZheng/dandanplay-resource-service"
repository = "https://github.com/LussacZheng/dandanplay-resource-service"
license = "Apache-2.0"
keywords = ["dandanplay", "api-service", "web-scraper", "resource-search"]
categories = ["command-line-utilities"]

build = "build.rs"

# Private for now
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.9"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }
actix-web = "4"
reqwest = { version = "0.11", features = ["socks"] }
html_scraper = { package = "scraper", version = "0.13.0" }
chrono = { version = "0.4", default-features = false, features = ["std"] }

[build-dependencies]
regex = "1"
rustc_version = "0.4.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[profile.release]
opt-level = "z"
strip = true
lto = true
panic = "abort"
codegen-units = 1
